# llm-data-extraction

./: .gitignore  README.md  document_loader.py  llm_query.py  pyproject.toml  requirements.txt  setup.py  user_interface.py
.streamlit/: secrets.toml
config/: config.env  secrets_example.env
data/: metadata.csv  schema.txt  schema_example.json
data/example_prompts/: agenda_prompt.txt  agenda_prompt_stadsfullmäktige.txt  cypher_generation_prompt.txt  meeting_agenda_extraction_prompt.txt  meeting_metadata_extraction_prompt.txt
data/llm/prompts/: agenda_extraction_prompt.txt  cypher_filter_prompt.txt  cypher_generation_prompt.txt  cypher_qa_prompt.txt  diagram_generation_prompt.txt  errand_extraction_prompt.txt  meeting_metadata_extraction_prompt.txt  pages_generation_prompt.txt  timeline_generation_prompt.txt
data/llm/schema/: agenda_schema.json  field_descriptions.json  metadata_schema.json  schema.json  schema_example.json
data/llm_prompts/: agenda_extraction_prompt.txt  cypher_generation_prompt.txt  cypher_qa_prompt.txt  diagram_generation_prompt.txt  timeline_generation_prompt.txt
data/schema/: agenda_schema.json  metadata_schema.json  schema.json  schema_example.json
db/6642a0db-94da-40d2-8ae0-a3dac2bd5ed7/: index_metadata.pickle
db/b4e2c165-cd94-47d5-b64b-e6d20f2cc186/: index_metadata.pickle
db/f28e61b1-26e1-4d11-b08a-2877e4c89cd3/: index_metadata.pickle
notebooks/: data_accuracy.ipynb  data_pipeline.ipynb  unstructured_to_structured_data_pipeline.ipynb
src/: app.py  llm_kg_retrieval.py  llm_query.py  llm_vector_retrieval.py  pdf_to_html_coverter.py  scrape_website.py  user_interface.py  website_scraper.py
src/chatbot/: app.py  llm_kg_retrieval.py
src/data_pipeline/: __init__.py  document_downloader.py  document_loader.py  evaluations.py  extract_meeting_metadata.py  file_converter.py  file_coverter.py  kg_creator.py  meeting_agenda_extractor.py  meeting_data_extractor.py  meeting_metadata_extractor.py  pdf_coverter.py  pdf_to_html_coverter.py  result_visualization.py  simple_rate_limiter.py  utils.py  website_scraper.py
