[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-data-extraction"
version = "0.2.0"
description = "A project for LLM structured data extraction from unstructured data"
authors = [
    { name = "Ashish Dahal" }
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["llm", "data-extraction"]

dependencies = [
    "aiofiles==23.2.1",
    "aiolimiter==1.1.0",
    "dash==2.18.2",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-openai==0.2.0",
    "mammoth==1.6.0",
    "matplotlib==3.9.2",
    "neo4j==5.16.0",
    "notebook==7.2.2",
    "openai==1.64.0",
    "PyMuPDF==1.25.3",
    "python-dotenv==1.0.0",
    "ratelimit==2.2.1",
    "retry==0.9.2",
    "streamlit==1.30.0",
    "tiktoken>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]
