[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-data-extraction"
version = "0.2.0"
description = "A project for LLM structured data extraction from unstructured data"
authors = [
    { name = "Ashish Dahal" },
    { name = "Dennis Bengs" }
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["llm", "data-extraction"]

dependencies = [
    "aiofiles==24.1.0",
    "aiolimiter==1.2.0",
    "dash==2.18.2",
    "langchain==0.3.19",
    "langchain-neo4j==0.3.0",
    "langchain-openai==0.3.7",
    "mammoth==1.9.0",
    "matplotlib==3.10.1",
    "neo4j==5.28.1",
    "notebook==7.3.2",
    "openai==1.65.1",
    "PyMuPDF==1.25.3",
    "python-dotenv==1.0.1",
    "ratelimit==2.2.1",
    "retry==0.9.2",
    "streamlit==1.42.2",
    "tabulate==0.9.0",
    "tiktoken>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
